--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -3,10 +3,16 @@
     height: 70vh;
     display: flex;
     flex-direction: column;
-    background-image: url('../../assets/img/me-wall.png');
+    background-image: url('../../assets/img/me-home.jpeg');
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
+    filter: grayscale(100%);
+    transition: all 2s ease;
+}
+
+.home:hover {
+    filter: grayscale(0%);
 }
 
 .home__contentWrapper {
