Backend Setup and Project Routes DONE

--- a/client/src/responsive.css
+++ b/client/src/responsive.css
@@ -239,6 +239,7 @@
     .contact__headerDesc {
         padding-left: 20px;
         padding-right: 20px;
+        font-size: 1rem;
     }
 
     /* TreeItem **************************************************************************/
