Admin Projects Section DONE

--- a/admin/src/utils/Comp/Loading/Loading.css
+++ b/admin/src/utils/Comp/Loading/Loading.css
@@ -1,7 +1,7 @@
 .loading {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 100000;
 }
