Resume Feature in server, admin & client and Projects page card effect and navbar fill on scroll DONE

--- a/admin/src/components/Sidebar/Sidebar.css
+++ b/admin/src/components/Sidebar/Sidebar.css
@@ -8,3 +8,14 @@
     display: flex;
     align-items: center;
 }
+
+.sidebar__resumeButtonWrapper {
+    width: 100%;
+    display: grid;
+    place-items: center;
+    margin-top: 15px;
+}
+
+.sidebar__resumeButton {
+    width: 80%;
+}
