--- a/client/src/responsive.css
+++ b/client/src/responsive.css
@@ -136,6 +136,11 @@
         padding-top: 50px;
     }
 
+    /* Exp ******************************************************************************/
+    .exp > span.line {
+        width: 80%;
+    }
+
     /* Skill ******************************************************************************/
     .skill:last-child {
         margin-bottom: 0;
