Experience tasks tick icon flex-start FIXED

--- a/admin/src/components/Experience/ExpItem/ExpItem.css
+++ b/admin/src/components/Experience/ExpItem/ExpItem.css
@@ -33,7 +33,7 @@
 
 .expItem .main .withLinkWrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .expItem .main .withLinkWrapper .MuiSvgIcon-root {
