--- a/admin/src/components/Projects/ProjectItem/ProjectItem.css
+++ b/admin/src/components/Projects/ProjectItem/ProjectItem.css
@@ -8,6 +8,7 @@
     padding: 15px;
     box-shadow: 1px 1px 3px #ddd;
     border-radius: 5px;
+    background-color: #fff;
 }
 
 .projectItem .header {
