--- a/admin/src/components/Experience/ExpItem/ExpItem.css
+++ b/admin/src/components/Experience/ExpItem/ExpItem.css
@@ -9,6 +9,7 @@
     box-shadow: 1px 1px 3px #ddd;
     border-radius: 5px;
     position: relative;
+    background-color: #fff;
 }
 
 .expItem .header {
