--- a/admin/src/components/Experience/ExpItem/ExpItem.css
+++ b/admin/src/components/Experience/ExpItem/ExpItem.css
@@ -32,6 +32,10 @@
     flex: 0.5;
 }
 
+.expItem .main .contentEntity {
+    margin-bottom: 25px;
+}
+
 .expItem .main .withLinkWrapper {
     display: flex;
     align-items: flex-start;
