Skills list reorder feature DONE

--- a/admin/src/components/Skills/SkillItem/SkillItem.css
+++ b/admin/src/components/Skills/SkillItem/SkillItem.css
@@ -9,6 +9,7 @@
     padding: 15px;
     box-shadow: 1px 1px 3px #ddd;
     border-radius: 5px;
+    background-color: #fff;
 }
 
 .skillItem .header {
