--- a/client/src/components/Projects/ProjectSlide/ProjectSlide.css
+++ b/client/src/components/Projects/ProjectSlide/ProjectSlide.css
@@ -1,22 +1,21 @@
-.project {
+.projectSlide {
     background-color: transparent;
     display: flex;
-    margin-top: 30px;
     justify-content: space-between;
     min-width: 100%;
 }
 
-.project__imgWrapper {
+.projectSlide__imgWrapper {
     flex: 0.675;
     position: relative;
 }
 
-.project__imgWrapper img {
+.projectSlide__imgWrapper img {
     width: 100%;
     height: 100%;
 }
 
-.project__imgOverlay {
+.projectSlide__imgOverlay {
     position: absolute;
     width: 100%;
     height: 0%;
@@ -28,7 +27,7 @@
     transition: all 0.3s ease;
 }
 
-.project__imgOverlay a {
+.projectSlide__imgOverlay a {
     opacity: 0;
     background-color: transparent;
     border: 1px solid var(--text-white);
@@ -43,81 +42,83 @@
     text-decoration: none;
 }
 
-.project__imgOverlay a:hover {
+.projectSlide__imgOverlay a:hover {
     background-color: var(--text-white);
     color: var(--text-light);
 }
 
-.project__imgOverlay a:active {
+.projectSlide__imgOverlay a:active {
     background-color: #fff;
 }
 
-.project__imgOverlay a:focus {
+.projectSlide__imgOverlay a:focus {
     outline: none;
 }
 
-.project__imgWrapper:hover img {
+.projectSlide__imgWrapper:hover img {
     filter: grayscale(100%);
 }
 
-.project__imgWrapper:hover .project__imgOverlay {
+.projectSlide__imgWrapper:hover .projectSlide__imgOverlay {
     height: 100%;
 }
 
-.project__imgWrapper:hover .project__imgOverlay a {
+.projectSlide__imgWrapper:hover .projectSlide__imgOverlay a {
     opacity: 1;
 }
 
-.project__descWrapper {
+.projectSlide__descWrapper {
     flex: 0.3;
 }
 
-.project__descWrapper h2 {
-    font-size: 3rem;
-    letter-spacing: 3px;
+.projectSlide__descWrapper h2 {
+    font-size: 1.6rem;
+    letter-spacing: 1px;
     font-weight: 700;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-.project__descWrapper p {
-    font-size: 1.2rem;
-    font-weight: 700;
+.projectSlide__descWrapper p {
+    font-size: 1.05rem;
+    font-weight: 600;
     color: var(--text-light);
     margin: 0 auto 20px;
 }
 
-.project__descWrapper h3 {
+.projectSlide__descWrapper h3 {
     color: var(--dark);
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     margin-bottom: 5px;
+    font-size: 1rem;
 }
 
-.project__techUsed {
+.projectSlide__techUsed {
     margin-bottom: 20px;
     display: flex;
     flex-wrap: wrap;
 }
 
-.project__techUsed span {
+.projectSlide__techUsed span {
     color: var(--text-white);
     background-color: var(--dark);
     margin: 5px 10px 5px 0;
-    padding: 10px 20px;
+    padding: 10px 15px;
     border-radius: 5px;
     transition: all 0.3s ease;
+    font-size: 0.9rem;
 }
 
-.project__techUsed span:hover {
+.projectSlide__techUsed span:hover {
     color: #fff;
 }
 
-.project__date {
+.projectSlide__date {
     color: var(--text-white);
     display: flex;
     align-items: center;
 }
 
-.project__date span:nth-child(2) {
+.projectSlide__date span:nth-child(2) {
     width: 50px;
     border-top: 3px solid var(--text-light);
     margin: 0 10px;
