--- a/client/src/responsive.css
+++ b/client/src/responsive.css
@@ -45,20 +45,9 @@
     }
 
     /* Projects **************************************************************************/
-    .projects__projectsWrapper {
-        height: auto;
-    }
-
-    .projects__projectNavBtns button:first-child {
-        top: -75vh;
-        left: 0;
-        border-right: 25px solid var(--dark);
-    }
-
-    .projects__projectNavBtns button:last-child {
-        top: -75vh;
-        right: 0;
-        border-left: 25px solid var(--dark);
+    .projects__viewAll a  {
+        padding: 15px 50px;
+        letter-spacing: 1px;
     }
 
     .projects__allProjects {
@@ -75,35 +64,6 @@
 
     .projects__allProjectsHeader span {
         width: 150px;
-    }
-
-    /* Project *************************************************************************/
-    .project {
-        flex-direction: column;
-    }
-
-    .project__imgWrapper {
-        flex: 1;
-        max-height: 300px;
-    }
-
-    .project__imgWrapper img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .project__imgOverlay button {
-        font-size: 1rem;
-    }
-
-    .project__descWrapper {
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-top: 20px;
-    }
-
-    .project__descWrapper h2 {
-        font-size: 2.5rem;
     }
 
     /* ProjectCard *********************************************************************/
@@ -316,5 +276,45 @@
 
     .footer__creditsWrapper {
         margin-top: 0;
+    }
+}
+
+@media (max-width: 1100px) {
+    /* ProjectCarousel **********************************************************************/
+    .projectCarousel__slidesWrapper {
+        min-height: 100vh;
+    }
+
+    .projectCarousel__slidesWrapper button {
+        display: none;
+    }
+
+    /* ProjectSlide *************************************************************************/
+    .projectSlide {
+        flex-direction: column;
+    }
+
+    .projectSlide__imgWrapper {
+        flex: 1;
+        max-height: 400px;
+    }
+
+    .projectSlide__imgWrapper img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectSlide__imgOverlay button {
+        font-size: 1rem;
+    }
+
+    .projectSlide__descWrapper {
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-top: 20px;
+    }
+
+    .projectSlide__descWrapper h2 {
+        font-size: 1.2rem;
     }
 }
