--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 :root {
@@ -10,6 +11,11 @@
     --bg-dark-transparent: rgba(20, 19, 19, 0.712);
     --text-white: rgba(228, 225, 225, 0.685);
     --white: #fff;
+}
+
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .app {
