Scrollbar styling DONE || getViewportWidth function DELETED

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,19 @@ body {
     max-width: 90vw;
     margin: 0 auto;
 }
+
+/* styling scrollbar */
+::-webkit-scrollbar-track {
+    border: 4px solid var(--white);
+    background-color: var(--text-light);
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--text-light);
+    border-radius: 0px;
+}
