--- a/client/src/components/Projects/ProjectCarousel/ProjectCarousel.css
+++ b/client/src/components/Projects/ProjectCarousel/ProjectCarousel.css
@@ -34,6 +34,7 @@
 .projectCarousel__slide.activeSlide {
     opacity: 1;
     transform: translateX(0);
+    z-index: 2;
 }
 
 .projectCarousel__slide.lastSlide {
@@ -57,6 +58,7 @@
     border-top: 40px solid transparent;
     border-bottom: 40px solid transparent;
     transition: all 0.3s ease;
+    z-index: 4;
 }
 
 .projectCarousel__slidesWrapper button:focus {
