--- a/client/src/components/Projects/ProjectSlide/ProjectSlide.css
+++ b/client/src/components/Projects/ProjectSlide/ProjectSlide.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     min-width: 100%;
+    height: 100%;
 }
 
 .projectSlide__imgWrapper {
@@ -112,14 +113,27 @@
     color: #fff;
 }
 
-.projectSlide__date {
-    color: var(--text-white);
-    display: flex;
-    align-items: center;
+.projectSlide__viewLinks {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 25px;
 }
 
-.projectSlide__date span:nth-child(2) {
-    width: 50px;
-    border-top: 3px solid var(--text-light);
+.projectSlide__viewLinks a {
+    text-decoration: none;
+    font-weight: 700;
+    color: var(--dark);
+    font-size: 1.2rem;
+    transition: all 0.2s ease;
+    border-bottom: 3px solid var(--dark);
+}
+
+.projectSlide__viewLinks a:hover {
+    padding-bottom: 2px;
+}
+
+.projectSlide__viewLinks span {
     margin: 0 10px;
+    color: var(--text-light);
+    font-weight: 700;
 }
