Replace onclick handlers with proper links and migrated responsive css to corresponding components css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,13 @@ body {
     background-color: var(--text-light);
     border-radius: 0px;
 }
+
+@media (max-width: 700px) {
+    .app {
+        max-width: 100vw;
+    }
+
+    .responsive__hide {
+        display: none;
+    }
+}
