--- a/client/src/components/Contact/ContactForm/ContactForm.css
+++ b/client/src/components/Contact/ContactForm/ContactForm.css
@@ -116,3 +116,24 @@
     border-left: 5px solid var(--dark);
     border-right: 5px solid var(--dark);
 }
+
+@media (max-width: 700px) {
+    .contactForm form {
+        padding: 100px 20px 50px;
+        margin-bottom: 0;
+    }
+
+    .contactForm__group {
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .contactForm__inputWrapper {
+        flex: 1;
+        margin-bottom: 50px;
+    }
+
+    .contactForm button {
+        margin-top: 10px;
+    }
+}
