--- a/client/src/components/Contact/TreeItem/TreeItem.css
+++ b/client/src/components/Contact/TreeItem/TreeItem.css
@@ -51,3 +51,13 @@
 .treeItem__leaf.right h2 {
     order: 2;
 }
+
+@media (max-width: 700px) {
+    .treeItem {
+        height: 100px;
+    }
+
+    .treeItem.right:first-child {
+        margin-top: 200px;
+    }
+}
