--- a/client/src/components/Expertise/Expertise.css
+++ b/client/src/components/Expertise/Expertise.css
@@ -38,3 +38,23 @@
     flex-direction: column;
     margin-top: 50px;
 }
+
+@media (max-width: 700px) {
+    .expertise {
+        flex-direction: column;
+    }
+
+    .expertise__expSection {
+        flex: 1;
+        width: 100%;
+        border: none;
+        padding-left: 20px;
+        padding-right: 0px;
+    }
+
+    .expertise__skillsSection {
+        flex: 1;
+        border-left: 30px solid var(--bg-dark-transparent);
+        padding-top: 50px;
+    }
+}
