--- a/client/src/components/Expertise/Skill/Skill.css
+++ b/client/src/components/Expertise/Skill/Skill.css
@@ -53,3 +53,9 @@
 .skill:hover img {
     filter: grayscale(100%);
 }
+
+@media (max-width: 700px) {
+    .skill:last-child {
+        margin-bottom: 0;
+    }
+}
