--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -138,3 +138,26 @@
 .footer__creditsWrapper:hover i {
     color: var(--dark);
 }
+
+@media (max-width: 700px) {
+    .footer {
+        padding: 50px 20px;
+    }
+
+    .footer__sections {
+        flex-direction: column;
+    }
+
+    .footer__section {
+        flex: 1;
+        margin-bottom: 50px;
+    }
+
+    .footer__section p {
+        padding: 0;
+    }
+
+    .footer__creditsWrapper {
+        margin-top: 0;
+    }
+}
