--- a/client/src/components/Header/Menu/Menu.css
+++ b/client/src/components/Header/Menu/Menu.css
@@ -33,17 +33,24 @@
     color: var(--text-white);
 }
 
-.menuWrapper p {
+.menuWrapper a {
     font-size: 3rem;
     margin-bottom: 10px;
     color: var(--text-white);
     font-weight: 700;
     transition: all 0.3s ease;
     cursor: pointer;
+    text-decoration: none;
 }
 
-.menuWrapper p:hover {
+.menuWrapper a:hover {
     color: #fff;
     border-left: 8px solid #fff;
     padding-left: 5px;
+}
+
+@media (max-width: 700px) {
+    .menuWrapper a {
+        font-size: 2rem;
+    }
 }
