--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -100,3 +100,23 @@
 .home__resume.disabled {
     cursor: not-allowed;
 }
+
+@media (max-width: 700px) {
+    .home {
+        background-position: top;
+        height: fit-content;
+    }
+
+    .home__contentWrapper {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        width: fit-content;
+        margin-top: 400px;
+    }
+
+    .home__profession {
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+}
