--- a/client/src/components/Projects/ProjectSlide/ProjectSlide.css
+++ b/client/src/components/Projects/ProjectSlide/ProjectSlide.css
@@ -137,3 +137,34 @@
     color: var(--text-light);
     font-weight: 700;
 }
+
+@media (max-width: 1100px) {
+    .projectSlide {
+        flex-direction: column;
+    }
+
+    .projectSlide__imgWrapper {
+        flex: 0;
+        max-height: 40vh;
+    }
+
+    .projectSlide__imgWrapper img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectSlide__imgOverlay button {
+        font-size: 1rem;
+    }
+
+    .projectSlide__descWrapper {
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-top: 20px;
+        flex: 1;
+    }
+
+    .projectSlide__descWrapper h2 {
+        font-size: 1.2rem;
+    }
+}
