--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -50,3 +50,26 @@
     width: 300px;
     border-bottom: 3px solid var(--dark);
 }
+
+@media (max-width: 700px) {
+    .projects__viewAll a {
+        padding: 15px 50px;
+        letter-spacing: 1px;
+    }
+
+    .projects__allProjects {
+        padding-left: 20px;
+        padding-right: 20px;
+        flex-direction: column;
+    }
+
+    .projects__allProjectsHeader h2 {
+        font-size: 2.5rem;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .projects__allProjectsHeader span {
+        width: 150px;
+    }
+}
