my photos and descriptions update

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -3,7 +3,7 @@
     height: 70vh;
     display: flex;
     flex-direction: column;
-    background-image: url('../../assets/img/me-home.jpeg');
+    background-image: url('../../assets/img/me-home.jpg');
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
